tests/fixtures/invalid/pow_float_dict_float.py
# Cannot call pow() with Float, Dict[str, int], Float
x = pow(1.0, {"a": 1}, 1.0)
